try to fix "Punkt hinzufügen" visual bug on mobile -v2

--- a/src/app/admin-components/bugapoint-management/bugapointpanel/bugapointpanel.component.css
+++ b/src/app/admin-components/bugapoint-management/bugapointpanel/bugapointpanel.component.css
@@ -1,6 +1,6 @@
 #bugapointpanel {
   overflow: auto;
-  height: calc(100vh - 200px);
+  height: calc(100vh - 300px);
 }
 
 #bugapointpanel-content {
